update en json for banner description

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "banner": {
-    "title": "Fast, Cashless <green>Toll Payment</green>",
-    "description": "Experience a hassle-free toll payment system with real-time vehicle verification and seamless transactions.",
+    "title": "eKpass – One Pass, All Tolls,<green>Total Freedom</green>",
+    "description": "eKpass is Bangladesh’s first fully interoperable toll payment platform — connecting all toll authorities under one seamless system. Whether you are crossing bridges, highways, or expressways, you can register your vehicle easily through any financial app and start paying tolls instantly from any bank or mobile wallet you prefer. For corporate customers, eKpass offers advanced tools — bulk vehicle registration upload, detailed reporting options, and exclusive benefits to manage large fleets with ease. With eKpass, travel is faster, payments are smarter, and tolls are simpler than ever before.",
     "button": "Get Started"
   },
   "landingheader": {
