update the bn json

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -1,7 +1,7 @@
 {
   "banner": {
-    "title": "দ্রুত, ক্যাশলেস <green>টোল পেমেন্ট</green>",
-    "description": "রিয়েল-টাইম গাড়ির যাচাইকরণ ও সহজ লেনদেন সহ ঝামেলাহীন টোল পেমেন্ট সিস্টেমের অভিজ্ঞতা নিন।",
+    "title": "eKpass – এক পাস, সকল টোল,<green>পূর্ণ স্বাধীনতা</green>",
+    "description": "eKpass হল বাংলাদেশের প্রথম সম্পূর্ণ আন্তঃপরিচালিত টোল পেমেন্ট প্ল্যাটফর্ম — যা সমস্ত টোল কর্তৃপক্ষকে একটি নিরবচ্ছিন্ন সিস্টেমের অধীনে সংযুক্ত করে। আপনি সেতু, মহাসড়ক বা এক্সপ্রেসওয়ে পারাপারের সময় যেকোনো আর্থিক অ্যাপের মাধ্যমে সহজেই আপনার গাড়ি নিবন্ধন করতে পারেন এবং আপনার পছন্দের যেকোনো ব্যাংক বা মোবাইল ওয়ালেট থেকে তাৎক্ষণিকভাবে টোল পরিশোধ শুরু করতে পারেন। কর্পোরেট গ্রাহকদের জন্য, eKpass উন্নত সরঞ্জামগুলি অফার করে — বাল্ক যানবাহন নিবন্ধন আপলোড, বিস্তারিত প্রতিবেদনের বিকল্প এবং সহজেই বৃহৎ বহর পরিচালনা করার জন্য একচেটিয়া সুবিধা। eKpass এর মাধ্যমে, ভ্রমণ দ্রুততর হয়, অর্থপ্রদান আরও স্মার্ট হয় এবং টোল আগের চেয়ে সহজ হয়।",
     "button": "শুরু করুন"
   },
   "landingheader": {
