update the tollrates

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -11,5 +11,50 @@
     "toll_rate": "টোল রেট",
     "support": "সহায়তা",
     "login_signup": "লগইন / সাইনআপ"
+  },
+  "howItWorks": {
+    "title": "কিভাবে কাজ করে",
+    "subtitle": "আমাদের টোল সিস্টেম ব্যবহার শুরু করতে এই ধাপগুলো অনুসরণ করুন",
+    "steps": [
+      {
+        "title": "ইউজার রেজিস্ট্রেশন",
+        "points": [
+          "পূর্ণ নাম লিখুন",
+          "সঠিক ফোন নম্বর প্রদান করুন",
+          "অ্যাকাউন্ট টাইপ নির্বাচন করুন",
+          "একটি সুরক্ষিত পিন সেট করুন",
+          "পিন নাম্বারটি পুনরায় নিশ্চিত করুন",
+          "OTP যাচাই করুন",
+          "রেজিস্ট্রেশন প্রক্রিয়া সম্পন্ন করুন"
+        ]
+      },
+      {
+        "title": "যানবাহন নিবন্ধন",
+        "points": [
+          "আপনার জোন নির্বাচন করুন",
+          "যানবাহনের শ্রেণী নির্বাচন করুন",
+          "যানবাহন নিবন্ধন নাম্বার লিখুন",
+          "চ্যাসিস নাম্বারের শেষ ৪ সংখ্যা প্রদান করুন",
+          "আপনার গাড়ির নাম হিসেবে একটি নাম রাখুন"
+        ]
+      },
+      {
+        "title": "রিচার্জ / টপ-আপ",
+        "points": [
+          "রিচার্জের পরিমাণ লিখুন",
+          "রিচার্জ/টপ-আপ বোতামে ক্লিক করুন",
+          "একটি পেমেন্ট মডাল আসবে — পেমেন্ট পদ্ধতি নির্বাচন করুন",
+          "রিচার্জ/টপ-আপ প্রক্রিয়া সম্পন্ন করুন"
+        ]
+      },
+      {
+        "title": "সহায়তা",
+        "points": [
+          "সহায়তার জন্য ইমেইলে যোগাযোগ করুন",
+          "৩৩৩ (হেল্প লাইন) এ কল করুন",
+          "তাৎক্ষণিক সহায়তার জন্য লাইভ চ্যাট ব্যবহার করুন"
+        ]
+      }
+    ]
   }
 }
