update the en.json and bn.json file

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -56,5 +56,145 @@
         ]
       }
     ]
+  },
+  "tollRate": {
+    "title": "কর্তৃপক্ষ ও সেতু অনুযায়ী টোল হার",
+    "subtitle": "বিভিন্ন ধরনের যানবাহনের হালনাগাদ টোল হার, কর্তৃপক্ষ ও সেতু অনুযায়ী সাজানো।",
+    "loadMore": "আরও দেখুন",
+    "showLess": "কম দেখুন",
+    "footerNote": "*সরকারি নীতি ও বিশেষ অনুষ্ঠানের ভিত্তিতে টোল হার পরিবর্তন হতে পারে।",
+    "tableHeaders": {
+      "vehicleClass": "যানবাহনের ধরণ",
+      "rate": "হার"
+    },
+    "authorities": {
+      "Hanif (Orion)": {
+        "মেয়র মোহাম্মদ হানিফ ফ্লাইওভার": [
+          { "vehicle": "মোটরসাইকেল", "rate": "৫০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "১০০" },
+          { "vehicle": "পিকআপ", "rate": "১৫০" },
+          { "vehicle": "বাস", "rate": "২০০" },
+          { "vehicle": "ট্রাক", "rate": "২৫০" }
+        ]
+      },
+      "BBA": {
+        "পদ্মা সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "১০০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৭৫০" },
+          { "vehicle": "পিকআপ", "rate": "১২০০" },
+          { "vehicle": "মাইক্রোবাস", "rate": "১৩০০" },
+          { "vehicle": "মিনিবাস", "rate": "১৪০০" },
+          { "vehicle": "মিডিয়াম বাস", "rate": "২০০০" },
+          { "vehicle": "বড় বাস", "rate": "২৪০০" },
+          { "vehicle": "ট্রাক (৫ টন পর্যন্ত)", "rate": "১৬০০" },
+          { "vehicle": "ট্রাক (৫-৮ টন)", "rate": "২১০০" },
+          { "vehicle": "ট্রাক (৩ এক্সেল)", "rate": "৫৫০০" },
+          { "vehicle": "ট্রেইলার (৪ এক্সেল)", "rate": "৬০০০" },
+          {
+            "vehicle": "ট্রেইলার (৪ এর বেশি এক্সেল)",
+            "rate": "৬০০০+প্রতি অতিরিক্ত এক্সেলে ১৫০০"
+          }
+        ],
+        "যমুনা সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "৫০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "১০০" },
+          { "vehicle": "বাস", "rate": "২০০" },
+          { "vehicle": "ট্রাক", "rate": "৩০০" }
+        ],
+        "কর্ণফুলী টানেল": [
+          { "vehicle": "প্রাইভেট কার/পিকআপ", "rate": "২০০" },
+          { "vehicle": "মাইক্রোবাস", "rate": "২৫০" },
+          { "vehicle": "বাস (৩১ আসন পর্যন্ত)", "rate": "৩০০" },
+          { "vehicle": "বাস (৩২+ আসন)", "rate": "৪০০" },
+          { "vehicle": "তিন এক্সেল বাস", "rate": "৫০০" },
+          { "vehicle": "ট্রাক", "rate": "১০০০" }
+        ]
+      },
+      "RHD": {
+        "কর্ণফুলী সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ],
+        "মেঘনা সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ],
+        "গুমটি সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ],
+        "ভৈরব সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ],
+        "পায়রা সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ],
+        "খান জাহান আলী (রূপসা) সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ],
+        "চরসিন্দুর সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ],
+        "শহীদ মঈউদ্দিন সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ],
+        "লালন শাহ সেতু": [
+          { "vehicle": "মোটরসাইকেল", "rate": "২০" },
+          { "vehicle": "গাড়ি/জিপ", "rate": "৫০" },
+          { "vehicle": "বাস", "rate": "১০০" },
+          { "vehicle": "ট্রাক", "rate": "১৫০" }
+        ]
+      }
+    }
+  },
+  "support": {
+    "title": "যোগাযোগ সহায়তা",
+    "subtitle": "আমাদের সহায়তা দল সবসময় আপনার পাশে রয়েছে। নিচে আপনার পছন্দের যোগাযোগ পদ্ধতি বেছে নিন।",
+    "methods": [
+      {
+        "title": "ইমেইল করুন",
+        "value": "support@ekpass.gov.bd",
+        "link": "mailto:support@ekpass.gov.bd",
+        "gradient": "from-blue-500 to-blue-400",
+        "icon": "faEnvelope"
+      },
+      {
+        "title": "কল করুন",
+        "value": "৩৩৩",
+        "link": "tel:333",
+        "gradient": "from-green-500 to-green-400",
+        "icon": "faPhone"
+      }
+    ]
+  },
+  "footer": {
+    "links": [
+      { "label": "গোপনীয়তা নীতি", "url": "/privacy-policy" },
+      { "label": "শর্তাবলী", "url": "/terms-and-conditions" }
+    ],
+    "technicalSupport": "প্রযুক্তিগত সহায়তা:",
+    "logoAlt": "লোগো",
+    "copyright": "© {{year}} একপাস। সর্বস্বত্ব সংরক্ষিত।"
   }
 }
